--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
             context: .
             dockerfile: Dockerfile
         container_name: sagi_api
+        command: python manage.py runserver 0.0.0.0:8000
         volumes:
             - ./:/app/
         ports: 
